fixed image cropping, research topics

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -72,6 +72,12 @@ flexslider
   color: #cc3333;
 }
 
+.grayscale {
+  filter: gray;
+  filter: grayscale(1);
+  -webkit-filter: grayscale(1);
+}
+
 /********** @MARGINS AND PADDING *********/
 .m0 {
   margin-bottom: 0em;
@@ -2092,6 +2098,17 @@ aside .active {
 }
 
 /********** @FOOTER *********/
+#footer-logo a {
+  display: block;
+  padding-top: 7px;
+  width: 140px;
+}
+#footer-logo a:hover {
+  filter: none;
+  filter: grayscale(0);
+  -webkit-filter: grayscale(0);
+}
+
 /********** @FEATURE *********/
 /********** @active ***********/
 /********** @<hr>s *************/
