--- a/static/scss/_style.scss
+++ b/static/scss/_style.scss
@@ -272,6 +272,19 @@ aside {
 
 /********** @FOOTER *********/
 
+#footer-logo a {
+	display: block;
+
+	padding-top:7px;
+	width: 140px;
+
+	&:hover {
+		filter: none;
+		filter: grayscale(0);
+		-webkit-filter: grayscale(0);
+	}
+}
+
 /********** @FEATURE *********/
 
 /********** @active ***********/
